# nasm-playground

./: .gitignore  CMakeLists.txt  README.md  compile.sh  listings.sh
src/: exit.asm
src/asm/: exit.asm  exit_linux.asm
src/asm/elf64/: call_linux.asm  exit_linux.asm  helloworldasm_linux.asm  library_linux.asm  librarycall_linux.asm  printString_linux.asm
src/asm/elf64/lib/: library_linux.asm
src/asm/macho64/: exit_mac.asm
src/c/: helloworld.c
